--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         if [ -f skill_seeker_mcp/requirements.txt ]; then pip install -r skill_seeker_mcp/requirements.txt; fi
-
+    - name: Ensure pytest-cov is installed
+      run: pip install pytest-cov
     - name: Run CLI tests
       run: |
         python -m pytest tests/test_scraper_features.py -v
